# ev-charging-demand-lakehouse

./: .gitignore  README.md  databricks.yml  pyproject.toml
docs/: CURRENT_ISSUES.md  STEPS.md  reference_links.md
docs/steps/: 00_workspace_setup.md  01_data_sources.md  02_bronze_layer.md  03_silver_transformations.md  04_gold_layer.md  05_data_quality.md  06_jobs_and_dashboard.md
notebook/: 00_smoke_test.py  01_ingest_cary_sessions.py  01_ingest_cary_sessions_autoloader.py  02_ingest_weather_openmeteo.py  02_ingest_weather_openmeteo_autoloader.py  03_ingest_afdc_stations.py  03_ingest_afdc_stations_autoloader.py  04_build_silver.py  05_build_gold.sql  06_data_quality_checks.sql  07_dashboard_queries.sql  __init__.py
raw/: AFDC.json  electric-vehicle-charging-stations.csv  open-meteo.csv
resources/: ev_charging_overview.dashboard.yml  ev_charging_pipeline.job.yml  sample_job.job.yml
resources/dashboards/: ev_charging_overview.lvdash.json
